refactor: change prepend strategy
